Use dedicated repository for drafts